tests/negative/pkg_warnings_in_pkg/target/src/foo.toit
// Copyright (C) 2021 Toitware ApS. All rights reserved.

/// Deprecated.
deprecated:

say_hi:
  deprecated
  return "hello"
